--- a/php-fpm/conf/www.conf
+++ b/php-fpm/conf/www.conf
@@ -6,4 +6,5 @@ pm.max_children = 5
 pm.start_servers = 2
 pm.min_spare_servers = 1
 pm.max_spare_servers = 3
+ping.path = /ping
 access.format = "%t \"%m %r%Q%q\" %s %{mili}dms %{kilo}Mkb %C%%"
