added native HEALTHCHECK

--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -3,11 +3,14 @@ MAINTAINER Andrew Ellis <awellis89@gmail.com>
 
 RUN set -x \
     && addgroup -g 82 -S www-data \
-    && adduser -u 82 -D -S -G www-data www-data
+    && adduser -u 82 -D -S -G www-data www-data \
+    && apk add --no-cache curl
 
 ADD entrypoint.sh /entrypoint.sh
-ADD readiness.sh /readiness.sh
-ADD liveness.sh /liveness.sh
+ADD conf/nginx.conf /etc/nginx/
+ADD conf/mime.types /etc/nginx/
+ADD conf/fastcgi_params /etc/nginx/
+ADD conf/default.conf /etc/nginx/conf.d/
 
 VOLUME /app
 WORKDIR /app
@@ -16,7 +19,6 @@ EXPOSE 80
 ENTRYPOINT ["/entrypoint.sh"]
 CMD ["nginx"]
 
-ADD conf/nginx.conf /etc/nginx/
-ADD conf/mime.types /etc/nginx/
-ADD conf/fastcgi_params /etc/nginx/
-ADD conf/default.conf /etc/nginx/conf.d/
+HEALTHCHECK --interval=5s --timeout=1s \
+    CMD \
+    curl --fail http://localhost:80/ping || exit 1
