--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -1,33 +1,18 @@
-map $http_host $app_env {
-  hostnames;
-
-  default              0;
-  .ngrok.io            1;
-}
-
-map $http_x_forwarded_proto $lb_https {
-  default  off;
-  https    on;
-}
-
-map "$app_env:$lb_https" $do_redirect {
-  default  0;
-  "1:off"  1;
-}
-
 server {
   listen 80 default_server;
-  server_name _;
 
   root /app/public;
   index index.php index.html index.htm;
 
-  if ($request_uri = "/webhook/turbobridge/caller/connect") {
-    set $do_redirect 0;
+  ## Health Check
+  location /ping {
+    access_log off;
+    return 200 'pong';
   }
 
-  if ($do_redirect) {
-    rewrite ^(.*)$ https://$host$1 permanent;
+  ## Redirect Non-HTTPS to HTTPS
+  if ($http_x_forwarded_proto = 'http') {
+    rewrite ^(.*)$ https://$server_name$1 permanent;
   }
 
   ## Laravel handler.
@@ -40,28 +25,13 @@ server {
     fastcgi_pass  php-fpm:9000;
     fastcgi_index index.php;
     fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-    fastcgi_param HTTPS $lb_https;
+    fastcgi_param HTTPS on;
     include fastcgi_params;
-  }
-
-  ## Ignore /ping.html requests
-  location /ping.html {
-    access_log off;
   }
 
   ## Block dot files.
   location ~ /\. {
     deny all;
-  }
-
-  ## Block bad bots.
-  if ($http_user_agent ~* (HTTrack|HTMLParser|discobot|Exabot|Casper|kmccrew|plaNETWORK|RPT-HTTPClient)) {
-    return 444;
-  }
-
-  ## Block certain Referers (case insensitive).
-  if ($http_referer ~* (sex|viagra|viagra) ) {
-    return 444;
   }
 
   ## Cache static assets.
