fixed ngrok for the new sweet way to do things

--- a/ngrok/Dockerfile
+++ b/ngrok/Dockerfile
@@ -1,4 +1,4 @@
-FROM debian:jessie
+FROM debian:jessie-slim
 MAINTAINER Andrew Ellis <awellis89@gmail.com>
 
 ADD https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-amd64.zip /tmp/ngrok.zip
