--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -11,7 +11,7 @@ server {
   }
 
   ## Redirect Non-HTTPS to HTTPS
-  if ($http_x_forwarded_proto = 'http') {
+  if ($http_x_forwarded_proto != 'https') {
     rewrite ^(.*)$ https://$server_name$1 permanent;
   }
 
