fixed the redirect for http -> https

--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -1,3 +1,8 @@
+map $http_x_forwarded_proto $do_redirect {
+  default "1";
+  "https" "0";
+}
+
 server {
   listen 80 default_server;
 
@@ -11,8 +16,8 @@ server {
   }
 
   ## Redirect Non-HTTPS to HTTPS
-  if ($http_x_forwarded_proto != 'https') {
-    rewrite ^(.*)$ https://$server_name$1 permanent;
+  if ($do_redirect) {
+    rewrite ^(.*)$ https://$host$1 permanent;
   }
 
   ## Laravel handler.
