php@7.2.5 mysql@5.722 nginx@1.13.12 redis@3.2.11

--- a/jenkins-builder/Dockerfile
+++ b/jenkins-builder/Dockerfile
@@ -14,11 +14,13 @@ USER root
 ##
 RUN set -ex; \
   apt-get update; \
-  apt-get install -y --no-install-recommends \
+  apt-get install -y \
     curl \
     jq \
     libapparmor-dev \
     libseccomp-dev \
+    build-essential \
+    libpng-dev \
   ; \
   rm -rf /var/lib/apt/lists/*
 
