--- a/php-fpm/Dockerfile
+++ b/php-fpm/Dockerfile
@@ -1,14 +1,8 @@
-FROM php:7.1.5-fpm-alpine
+FROM php:7.2.5-fpm-alpine
 MAINTAINER Andrew Ellis <awellis89@gmail.com>
 
-RUN apk --update add --virtual build-dependencies \
-        re2c \
-        file \
-        autoconf \
-        gcc \
-        make \
-        musl-dev \
-    && apk add --virtual php-dependencies \
+RUN set -ex; \
+    apk --update add --virtual php-dependencies \
         curl \
         git \
         freetype-dev \
@@ -19,35 +13,39 @@ RUN apk --update add --virtual build-dependencies \
         imap-dev \
         icu-dev \
         libxml2-dev \
-        libmcrypt-dev \
         postgresql-dev \
         fcgi \
-    && docker-php-ext-install pdo_mysql soap intl imap bcmath zip mcrypt pgsql opcache \
-    && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
-    && docker-php-ext-install gd \
-    && git clone https://github.com/nrk/phpiredis.git \
-    && cd phpiredis \
-    && phpize && ./configure --enable-phpiredis \
-    && make \
-    && make install \
-    && cd ../ \
-    && rm -rf phpiredis \
-    && pecl install xdebug \
-    && apk del build-dependencies \
-    && rm -rf /tmp/* \
-    && rm -rf /var/cache/apk/*
-
-ADD entrypoint.sh /entrypoint.sh
-ADD conf/php.ini /usr/local/etc/php/php.ini
-ADD conf/xdebug.ini /usr/local/etc/php/conf.d/xdebug.ini
-ADD conf/php-fpm.conf /usr/local/etc/php-fpm.conf
-ADD conf/www.conf /usr/local/etc/php-fpm.d/www.conf
+    ; \
+    docker-php-ext-install pdo_mysql soap intl imap bcmath zip pgsql opcache; \
+    docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/; \
+    docker-php-ext-install gd; \
+    rm -rf /tmp/*; \
+    rm -rf /var/cache/apk/*;
+    
+RUN set -ex; \
+    apk --update add --virtual build-dependencies \
+        re2c \
+        file \
+        autoconf \
+        gcc \
+        make \
+        musl-dev \
+    ; \
+    git clone https://github.com/nrk/phpiredis.git; \
+    cd phpiredis; \
+    phpize && ./configure --enable-phpiredis; \
+    make; \
+    make install; \
+    cd ../; \
+    rm -rf phpiredis; \
+    apk del build-dependencies; \
+    rm -rf /tmp/*; \
+    rm -rf /var/cache/apk/*;
 
 VOLUME /app
 WORKDIR /app
 
 EXPOSE 9000
-ENTRYPOINT ["/entrypoint.sh"]
 CMD ["php-fpm", "-F"]
 
 HEALTHCHECK --interval=5s --timeout=3s \
