--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -6,6 +6,7 @@ RUN set -ex; \
   apt-get update; \
   apt-get install -y \
     curl \
+    build-essential \
   ; \
   rm -rf /var/lib/apt/lists/*
 
